force-app/main/default/objects/Cost_Detail__c/Cost_Detail__c.object-meta.xml
<CustomObject>
    <description>이벤트에 연결된 비용 항목 저장용 오브젝트</description>
    <label>Cost Detail</label>
    <nameField>
        <label>Cost Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>