force-app/main/default/objects/Cost_Detail__c/fields/department__c.field-meta.xml
<CustomField>
    <fullName>department__c</fullName>
    <description>영업팀
개발팀
마케팅팀
기획팀</description>
    <label>department</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>