force-app/main/default/objects/Cost_Detail__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>비용이 속한 이벤트 (Event__c)</description>
    <label>Event</label>
    <referenceTo>My_Event__c</referenceTo>
    <relationshipLabel>Cost Details</relationshipLabel>
    <relationshipName>Cost_Details</relationshipName>
    <type>Lookup</type>
</CustomField>