force-app/main/default/objects/Cost_Detail__c/fields/My_Event__c.field-meta.xml
<CustomField>
    <fullName>My_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>My Event</label>
    <referenceTo>My_Event__c</referenceTo>
    <relationshipLabel>Cost Details (My Event)</relationshipLabel>
    <relationshipName>Cost_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>