force-app/main/default/objects/Cost_Detail__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>비용 관련 설명</description>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>