force-app/main/default/objects/Cost_Detail__c/fields/Owner_Department__c.field-meta.xml
<CustomField>
    <fullName>Owner_Department__c</fullName>
    <formula>CreatedBy.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Department</label>
    <type>Text</type>
</CustomField>